Redirect to 'profile' when signup or login

--- a/client/app/app.less
+++ b/client/app/app.less
@@ -19,6 +19,7 @@
 /* inject:less */
 @import 'admin/admin.less';
 @import 'main/main.less';
+@import 'profile/profile.less';
 @import '../components/footer/footer.less';
 @import '../components/modal/modal.less';
 @import '../components/oauth-buttons/oauth-buttons.less';
