--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a href="/" class="navbar-brand">boss-finder</a>
+      <span class="navbar-brand">boss-finder</span>
     </div>
     <div uib-collapse="nav.isCollapsed" class="navbar-collapse collapse" id="navbar-main">
       <ul class="nav navbar-nav" ng-show="nav.isLoggedIn()">
