Install github OAuth passport

--- a/client/components/oauth-buttons/oauth-buttons.html
+++ b/client/components/oauth-buttons/oauth-buttons.html
@@ -1,5 +1,8 @@
+<a ng-class="classes" ng-click="OauthButtons.loginOauth('github')" class="btn btn-social btn-github">
+  <i class="fa fa-github"></i>
+  Connect with Github
+</a>
 <a ng-class="classes" ng-click="OauthButtons.loginOauth('google')" class="btn btn-social btn-google">
   <i class="fa fa-google-plus"></i>
   Connect with Google+
 </a>
-
