--- a/client/components/oauth-buttons/oauth-buttons.html
+++ b/client/components/oauth-buttons/oauth-buttons.html
@@ -6,3 +6,7 @@
   <i class="fa fa-google-plus"></i>
   Connect with Google+
 </a>
+<a ng-class="classes" ng-click="OauthButtons.loginOauth('linkedin')" class="btn btn-social btn-linkedin">
+  <i class="fa fa-linkedin"></i>
+  Connect with LinkedIn
+</a>
